fix line break in left top navi

--- a/jportal_mcr_module/src/main/resources/web/jp-layout-default.css
+++ b/jportal_mcr_module/src/main/resources/web/jp-layout-default.css
@@ -745,10 +745,6 @@ body {
 
 #globalHomeLink {
 	display: inline-block;
-	width: 185px;
-}
-
-#globalHomeLink {
 	padding: 10px 0;
 }
 
